--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,11 +12,12 @@
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
 
-        <ImageView android:src="@drawable/ic_action_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="72dp"
+        <ImageView
+            android:layout_width="190dp"
+            android:layout_height="85dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginBottom="24dp"
-            android:layout_gravity="center_horizontal" />
+            android:src="@drawable/ic_action_logo_park2" />
 
         <!--  Email Label -->
         <com.google.android.material.textfield.TextInputLayout
