--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -13,11 +13,12 @@
         android:paddingLeft="24dp"
         android:paddingRight="24dp">
 
-        <ImageView android:src="@drawable/ic_action_profile"
-            android:layout_width="wrap_content"
-            android:layout_height="72dp"
+        <ImageView
+            android:layout_width="151dp"
+            android:layout_height="79dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginBottom="24dp"
-            android:layout_gravity="center_horizontal" />
+            android:src="@drawable/ic_action_logo_park2" />
 
         <!-- Name Label -->
         <com.google.android.material.textfield.TextInputLayout
