Commit de vista.  Related #174, #156, #153, #148, #145, #107, #104

--- a/app/src/main/res/layout/activity_parqueando.xml
+++ b/app/src/main/res/layout/activity_parqueando.xml
@@ -20,6 +20,7 @@
     </androidx.appcompat.widget.Toolbar>
 
     <GridLayout
+        android:id="@+id/gridLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:alignmentMode="alignMargins"
@@ -30,7 +31,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/my_toolbar"
+        app:layout_constraintTop_toBottomOf="@+id/textViewParqueaderoActual"
         app:layout_constraintVertical_bias="0.0"
         app:layout_editor_absoluteX="0dp">
 
@@ -195,5 +196,15 @@
         </androidx.cardview.widget.CardView>
 
     </GridLayout>
+
+    <TextView
+        android:id="@+id/textViewParqueaderoActual"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.04"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/my_toolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
