--- a/app/src/main/res/layout/activity_salir_parq.xml
+++ b/app/src/main/res/layout/activity_salir_parq.xml
@@ -4,33 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".IngresarParqueaderoActivity">
-
+    tools:context=".SalirParqActivity">
     <Button
-        android:id="@+id/buttonGenerarQr"
+        android:id="@+id/buttonGenerarQrSalir"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/button_ingresar_parqueadero"
+        android:text="@string/button_salir_qr_parqueadero"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
-        android:id="@+id/QR_Image"
+        android:id="@+id/QR_Image_Salir"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:contentDescription="@string/app_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonSeguiraParquear" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonSeguiraMain" />
 
     <Button
-        android:id="@+id/buttonSeguiraParquear"
+        android:id="@+id/buttonSeguiraMain"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/button_seguir_parquear"
+        android:text="@string/button_salir_parquear"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonGenerarQr" />
+        app:layout_constraintTop_toBottomOf="@+id/buttonGenerarQrSalir" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
