--- a/app/src/main/res/layout/activity_snapshot_automovil.xml
+++ b/app/src/main/res/layout/activity_snapshot_automovil.xml
@@ -4,33 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".IngresarParqueaderoActivity">
-
-    <Button
-        android:id="@+id/buttonGenerarQr"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/button_ingresar_parqueadero"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+    tools:context=".SnapshotAutomovilActivity">
 
     <ImageView
-        android:id="@+id/QR_Image"
+        android:id="@+id/SnapShot"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:contentDescription="@string/app_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonSeguiraParquear" />
+        app:layout_constraintTop_toTopOf="parent"
+        android:src="@drawable/ic_action_carro" />
 
-    <Button
-        android:id="@+id/buttonSeguiraParquear"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/buttonLlamarSeguridad"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/button_seguir_parquear"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:layout_gravity="end|bottom"
+        android:src="@drawable/ic_action_llamar"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.909"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/buttonGenerarQr" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.01999998" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
